# CoinSight

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix  rust-toolchain.toml  start.sh  ІТ-з91_Корчинський_код.docx  ДП_Корчинський_ч2_ПЗ_2023.docx
.github/workflows/: docker-image.yml  rust.yml
backend/aggregator/: Cargo.toml
backend/aggregator/src/: aggregator.rs  main.rs
backend/collectors/chainlink/: Cargo.toml
backend/collectors/chainlink/src/: collector.rs  error.rs  main.rs
backend/collectors/coingecko/: Cargo.toml
backend/collectors/coingecko/src/: main.rs
backend/collectors/common/: Cargo.toml
backend/collectors/common/src/: lib.rs
backend/collectors/cryptocompare/: Cargo.toml
backend/collectors/cryptocompare/src/: main.rs
backend/collectors/gateio/: Cargo.toml
backend/collectors/gateio/src/: main.rs
backend/common/communication/: Cargo.toml  build.rs
backend/common/communication/proto/: NotifyService.proto  UserService.proto  aggregator.proto
backend/common/communication/src/: lib.rs
backend/common/communication/src/proto/: coin_sight.rs
backend/db/: Cargo.toml
backend/db/crypto/: Cargo.toml
backend/db/crypto/src/: error.rs  lib.rs
backend/db/crypto/src/models/: aggregated_price.rs  aggregator_status.rs  cryptocurrency.rs  currency.rs  price.rs  source.rs
backend/db/migrations/2023-05-13-134215_create_structure/: down.sql  up.sql
backend/db/migrations/2023-05-13-134645_mock_data/: down.sql  up.sql
backend/db/migrations/2023-05-17-134054_aggregator_create_table/: down.sql  up.sql
backend/db/migrations/2023-05-17-203034_cryptocompare-api-data/: up.sql
backend/db/migrations/2023-05-17-212353_coingecko-api-data/: up.sql
backend/db/migrations/2023-05-21-101450_gateio-api-data/: up.sql
backend/db/src/: error.rs  lib.rs  models.rs  schema.rs
backend/db/src/models/: aggregated_price.rs  aggregator_status.rs  cryptocurrency.rs  currency.rs  mod.rs  price.rs  source.rs
backend/db/user/: Cargo.toml
backend/db/user/migrations/2023-05-21-162822_tables/: down.sql  up.sql
backend/db/user/migrations/2023-05-28-101412_add_extra_field/: up.sql
backend/db/user/migrations/2023-05-28-101948_migration/: up.sql
backend/db/user/migrations/2023-05-28-102313_migration/: up.sql
backend/db/user/migrations/2023-05-28-120110_migration/: up.sql
backend/db/user/migrations/2023-05-28-120252_migration/: up.sql
backend/db/user/migrations/2023-05-31-235141_tg/: down.sql  up.sql
backend/db/user/src/: lib.rs  schema.rs
backend/db/user/src/models/: mod.rs  notifications.rs  notifications_preferences.rs  telegram.rs  tokens.rs  users.rs
backend/graphql-api/: Cargo.toml
backend/graphql-api/src/: lib.rs  mutation.rs  query.rs  subscription.rs
backend/graphql-api/src/query/: mod.rs
backend/graphql-api/src/types/: crypto.rs  mod.rs  user.rs
backend/notification-service/: Cargo.toml
backend/notification-service/src/: main.rs  notifier.rs
backend/telegram-notification/: Cargo.toml
backend/telegram-notification/src/: bot.rs  grpc.rs  main.rs
backend/user-service/: Cargo.toml
backend/user-service/src/: lib.rs  main.rs
db/init/: 00-database.sql
frontend/: .dockerignore  Cargo.toml  Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css  main.rs  mockedData.js
frontend/src/components/: Alerts.js  CryptoCurrencyCard.js  CryptoDetails.js  CryptoDetails.module.css  CryptoList.js  CryptoList.module.css  Footer.js  Navbar.js  Navbar.module.css
frontend/src/components/asset/: Charts.js  CryptoChart.js  StatisticInfo.css  StatisticInfo.js
frontend/src/components/common/: CryptoCurrencyCard.css  CryptoCurrencyCard.js  Footer.css  Footer.js  Loading.js  Navbar.css  Navbar.js  Price.js  Search.css  Search.js  SignOut.js  TelegramAuthButton.js  TextMsg.js
frontend/src/components/main/: CryptoList.js
frontend/src/components/notification/: Create.css  Create.js
frontend/src/pages/: AssetPage.js  Login.js  MainPage.js  Notifications.js  Registration.js
frontend/src/pages/css/: AssetPage.css  Auth.css  MainPage.css  Notifications.css
nginx/: reverse_proxy.conf
