
[workspace]
members = [
    "backend/common/communication",
    "backend/graphql-api",
    "backend/db",
    "backend/collectors/common",
    "backend/collectors/chainlink",
    "backend/collectors/cryptocompare",
    "backend/collectors/coingecko",
    "backend/aggregator",
]


[workspace.package]
authors = ["Artur-Yurii Korchynskyui <artur.yurii.korchynskyi@gmail.com>"]
edition = "2021"
repository = "http://github.com/akorchyn/coinsight"


[workspace.dependencies]
# Common
dotenvy = "0.15.7"
thiserror = "1.0"
anyhow = "1.0"
bigdecimal = "0.3"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream", "trust-dns"] }
futures = "0.3"
serde = "1.0"
serde_json = "1.0"

## GRPC releated
tonic = "0.9"
tonic-build = "0.9"
prost = "0.11"
prost-types = "0.11"

## GraphQL releated
juniper = { git = "https://github.com/graphql-rust/juniper.git", branch = "master" }
juniper_rocket = { git = "https://github.com/graphql-rust/juniper.git", branch = "master" }

## Web releated
rocket = { version = "0.5.0-rc.3", default-features = false }
rocket_cors = "0.6.0-alpha2"

## Db
diesel = "2.0"
diesel-async = "0.2"

## collectors
ethers = { version = "2.0.0", features = ["legacy", "abigen"] }

# Our crates (CS for Coinsight, B for Backend)
csb-comm = { path = "backend/common/communication" }
csb-db = { path = "backend/db" }
csb-collector-common = { path = "backend/collectors/common" }
