[package]
name = "csb-db"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { workspace = true, features = ["chrono", "numeric"] }
diesel-async = { workspace = true, features = ["postgres", "bb8"] }
juniper = { workspace = true, features = ["chrono", "bigdecimal"] }
thiserror.workspace = true
anyhow.workspace = true
bigdecimal.workspace = true
chrono = { workspace = true, features = ["serde"] }
