[package]
name = "csb-grapql-lib"
version = "0.1.0"
edition.workspace = true


[[bin]]
name = "csb-graphql-api"
path = "src/bin/server.rs"

[dependencies]
juniper = { workspace = true, features = ["chrono", "bigdecimal"] }
juniper_rocket.workspace = true
rocket.workspace = true
rocket_cors.workspace = true
dotenvy.workspace = true
tonic.workspace = true
chrono.workspace = true
bigdecimal.workspace = true
hyper.workspace = true

csb-db-crypto.workspace = true
csb-db-user.workspace = true
csb-comm.workspace = true
