[package]
name = "notification-service"
version = "0.1.0"
edition.workspace = true

[dependencies]
tokio.workspace = true
dotenvy.workspace = true
futures.workspace = true
chrono.workspace = true
anyhow.workspace = true
bigdecimal.workspace = true
serde_json = "1.0"
reqwest.workspace = true

csb-db-crypto.workspace = true
csb-db-user.workspace = true
