[package]
name = "tg-service"
version = "0.1.0"
edition.workspace = true

[dependencies]
tokio.workspace = true
dotenvy.workspace = true
futures.workspace = true
chrono.workspace = true
anyhow.workspace = true
bigdecimal.workspace = true
reqwest.workspace = true
teloxide = { version = "0.12", features = ["macros"] }
tonic.workspace = true
env_logger = "0.10"

csb-comm.workspace = true
csb-db-user.workspace = true
