[package]
name = "csb-collector-common"
version = "0.1.0"
edition.workspace = true


[dependencies]
anyhow.workspace = true
reqwest.workspace = true
chrono.workspace = true
bigdecimal.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

csb-db.workspace = true
