[package]
name = "csb-comm"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
