[package]
name = "csb-db-user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { workspace = true, features = ["chrono", "numeric", "bigdecimal"] }
bigdecimal.workspace = true
diesel-async = { workspace = true, features = ["postgres", "bb8"] }
thiserror.workspace = true
anyhow.workspace = true
chrono = { workspace = true, features = ["serde"] }
